Fixes horizontal alignment of profile icon on detail page.

--- a/css/modules/profile-summary.css
+++ b/css/modules/profile-summary.css
@@ -139,15 +139,21 @@
         text-align: center;
     }
 
+    .profile--large a {
+        margin-left: calc(50% - 5.5em);
+        display: block;
+    }
+
     .profile--large .profile {
         display: block;
         margin: 1em auto;
         width: 100%;
     }
 
-    .profile--large .profile .profile-summary__name {
+    .profile--large .profile-summary__name {
         font-size: 250%
     }
+
 /*=======( Profile per Person )===============================================*/
 
 {% for department in site.data.members.departments %}
